buildPod.yml
apiVersion: v1
kind: Pod
spec:
  containers:
    - name: golang
      image: golang:1.18
      command:
        - sleep
      args:
        - infinity
    - name: kubectl
      image: localhost:32000/lh32469/kubectl:v5
      command:
        - sleep
      args:
        - infinity
    - name: docker
      image: docker:latest
      command:
        - sleep
      args:
        - infinity
