k8s.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ${project}
  name: ${project}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${project}
  template:
    metadata:
      labels:
        app: ${project}
    spec:
      hostAliases:
        - ip: "192.168.5.220"
          hostnames:
            - "dell-4290.local"
      containers:
        - name: ${project}
          image: localhost:32000/${project}:${branch}
          imagePullPolicy: "Always"
          resources:
            requests:
              memory: "25Mi"
              cpu: "250m"

---

kind: Service
apiVersion: v1
metadata:
  name: ${project}
spec:
  selector:
    app: ${project}
  ports:
    - name: web
      port: 10000
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${project}-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - ${host}.lth.guru
      secretName: tls-secret
  rules:
    - host: ${host}.lth.guru
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: ${project}
                port:
                  number: 10000
